ACLOCAL_AMFLAGS=-I m4
SUBDIRS=lib include external src
EXTRA_DIST=win32/Intersect/Intersect.vcproj win32/Intersect.sln	\
	win32/IntersectCommon/IntersectCommon.vcproj		\
	win32/view/view.vcproj data/aabb.test data/conedown.dxf	\
	data/coneup.dxf data/cube.dxf data/cylinderx.dxf	\
	data/cylindery.dxf data/cylinderz.dxf data/odd_cube.dtm	\
	data/odd_cube.str data/sphere.dxf data/testrelease.bat	\
	data/testdebug.bat 3rd_party/glut36/gl/glut.h		\
	3rd_party/glut36/glut.dll 3rd_party/glut36/glut.lib	\
	3rd_party/glut36/glut32.dll 3rd_party/glut36/glut32.lib	\
	3rd_party/glut36/README.win

