SUBDIRS=collection
includedir=@includedir@/carve

include_HEADERS=aabb.hpp carve.hpp classification.hpp collection.hpp	\
                collection_types.hpp csg.hpp debug_hooks.hpp		\
                edge_decl.hpp edge_impl.hpp face_decl.hpp		\
                face_impl.hpp faceloop.hpp geom.hpp geom2d.hpp		\
                geom3d.hpp input.hpp interpolator.hpp intersection.hpp	\
                iobj.hpp kd_node.hpp math.hpp math_constants.hpp	\
                matrix.hpp octree_decl.hpp octree_impl.hpp poly.hpp	\
                poly_decl.hpp poly_impl.hpp polyhedron_decl.hpp		\
                polyhedron_impl.hpp polyline.hpp polyline_decl.hpp	\
                polyline_impl.hpp polyline_iter.hpp rescale.hpp		\
                tag.hpp timing.hpp tree.hpp triangulator.hpp util.hpp	\
                vector.hpp vertex_decl.hpp vertex_impl.hpp
